# easy-tuner

./:  LICENSE  .gitignore  CLAUDE.md  PROCESS_CLEANUP_SOLUTION.md  QUICK_RELEASE.md  README.md  build-all.ps1
.github/workflows/: release.yml
backend/: build.bat  build.ps1  requirements.txt  serve.py  startup.py
backend/app/: __init__.py  main.py
backend/app/api/: internal.py  websocket.py  websocket_new.py
backend/app/core/: config.py  environment.py  exceptions.py  schema_manager.py
backend/app/models/: __init__.py  dataset.py  labeling.py  response.py  system.py  training.py
backend/app/services/: __init__.py  dataset_service.py  file_monitor.py  file_monitor_bridge.py  gpu_monitor.py  installation_service.py  labeling_service.py  musubi_fix_service.py  tb_event_service.py  training_service.py
backend/app/utils/: __init__.py  caption_qwen25vl.py  exceptions.py  files.py  git_utils.py  log_sink.py  logger.py  model_validator.py  musubi_helper.py  network_retry.py  parent_monitor.py  tensorboard_proto.py  (+3 more)
backend/config/: config.json
backend/scripts/: caption_qwen25vl.py  install_runtime.py
docs/: AGENTS.md  AUTO_UPDATE_QUICKSTART.md  CONTROL_IMAGE_SMART_UPLOAD.md  GITHUB_RELEASE_GUIDE.md  RELEASE_V0.0.1_GUIDE.md
runtime/: pyproject.toml  requirements-uv-windows.txt  setup_portable_uv.ps1
runtime/tagtragger_runtime/: __init__.py
web/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vite.config.web.ts
web/electron/: main.ts  preload.ts  tsconfig.json
web/src/: index.css  main.tsx  providers.tsx
(+115 files in other folders)
