[project]
name = "tagtragger-runtime"
version = "0.1.0"
description = "TagTragger Runtime Dependencies"
requires-python = ">=3.10, <3.13"
dependencies = [
    "accelerate",
    "av==14.0.1",
    "bitsandbytes==0.45.4",
    "diffusers",
    "einops",
    "huggingface-hub",
    "opencv-python==4.10.0.84",
    "pillow",
    "safetensors==0.4.5",
    # "sageattention>=1.0.6",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "transformers",
    "voluptuous==0.15.2",
    # Wan2.1
    "ftfy==6.3.1",
    "easydict==1.13",
    # FLUX.1 Kontext
    "sentencepiece==0.2.0",
]

[project.optional-dependencies]
cu124 = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
cu128 = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
dev = [
  "ascii-magic==2.3.0",
  "matplotlib==3.10.0",
  "tensorboard",
  "prompt-toolkit==3.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
